add ARM64 support for packaging: extend build tasks to handle ARM64 architecture, update packaging processes for Windows, macOS, and Linux, and introduce separate zipping tasks with cleanup logic for ARM64 executables